FreeRTOS and CMSIS added

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,8 @@ trafix                # Built binary
 #------------------------------------------------------------------------------
 *.tar.gz
 build.log
+
+#------------------------------------------------------------------------------
+# Archives
+#------------------------------------------------------------------------------
+archives/
